# CMakeList.txt : CMake project for HomeProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.5)

# Add source to this project's executable.
add_executable (HomeProject
                HomeProject.cpp
                HomeProject.hpp)

# TODO: Add tests and install targets if needed.
